--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     implementation files('libs/EnjoySDKV2-V4.0.0.aar')
     implementation project(':CabinetSerialPort')
     implementation project(':lib-netwrok')
-
+    implementation 'com.github.SumiMakito:AwesomeQRCode-Kotlin:1.0.5'
     //官方库
     def room_version = "2.5.2"
     implementation "androidx.room:room-runtime:$room_version"
