--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
         }
         //debug-db:1.0.7使用方式
         debug {
-            resValue("string", "PORT_NUMBER", "8081")
+            resValue("string", "PORT_NUMBER", "9999")
         }
     }
     // 动态生成包含年月日的APK文件名
@@ -131,7 +131,8 @@ dependencies {
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
-    implementation 'com.youth.banner:banner:2.1.0'
+//    implementation 'com.youth.banner:banner:2.1.0'
+    implementation 'io.github.youth5201314:banner:2.2.3'
     implementation 'com.airbnb.android:lottie:5.0.3'
     implementation 'pub.devrel:easypermissions:3.0.0'
     api 'com.gyf.immersionbar:immersionbar:3.0.0'
@@ -140,7 +141,6 @@ dependencies {
     implementation 'com.github.felHR85:UsbSerial:6.1.0'
     //日期
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
-
 //    implementation 'com.tencent.bugly:crashreport:4.1.9.3'
 //    implementation 'io.github.tonnyl:light:1.0.0'
     //implementation project(path: ':library:lib-base')
