--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.48"
     implementation "androidx.work:work-runtime-ktx:2.9.0"
     //三方库
+    implementation 'top.zibin:Luban:1.1.8'
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
