debug 界面ui  调试串口模拟

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,4 +167,10 @@ dependencies {
     //在终端中运行命令 -adb forward tcp:8080 tcp:8080然后打开http://localhost:8080
     //在串口模拟器执行 adb -s 192.168.56.111:5555 forward tcp:8081 tcp:8081
     debugImplementation("com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:1.0.7")
+
+    //极速版 (预计占用 4M 左右空间)，主要移除了一些不常用的编解码器
+//    implementation 'com.github.microshow:RxFFmpeg:4.9.0-lite'
+    implementation 'com.github.microshow:RxFFmpeg:4.9.0'
+
+
 }
